tests/baselines/reference/declarationEmitNameConflicts.errors.txt
declarationEmit_nameConflicts_0.ts(2,8): error TS1547: The 'module' keyword is not allowed for namespace declarations. Use the 'namespace' keyword instead.
declarationEmit_nameConflicts_0.ts(5,12): error TS1547: The 'module' keyword is not allowed for namespace declarations. Use the 'namespace' keyword instead.
declarationEmit_nameConflicts_0.ts(16,8): error TS1547: The 'module' keyword is not allowed for namespace declarations. Use the 'namespace' keyword instead.
declarationEmit_nameConflicts_0.ts(16,17): error TS1547: The 'module' keyword is not allowed for namespace declarations. Use the 'namespace' keyword instead.
declarationEmit_nameConflicts_0.ts(19,12): error TS1547: The 'module' keyword is not allowed for namespace declarations. Use the 'namespace' keyword instead.
declarationEmit_nameConflicts_0.ts(31,8): error TS1547: The 'module' keyword is not allowed for namespace declarations. Use the 'namespace' keyword instead.
declarationEmit_nameConflicts_0.ts(31,17): error TS1547: The 'module' keyword is not allowed for namespace declarations. Use the 'namespace' keyword instead.
declarationEmit_nameConflicts_0.ts(34,12): error TS1547: The 'module' keyword is not allowed for namespace declarations. Use the 'namespace' keyword instead.
declarationEmit_nameConflicts_0.ts(40,12): error TS1547: The 'module' keyword is not allowed for namespace declarations. Use the 'namespace' keyword instead.
declarationEmit_nameConflicts_1.ts(1,1): error TS1547: The 'module' keyword is not allowed for namespace declarations. Use the 'namespace' keyword instead.


==== declarationEmit_nameConflicts_0.ts (9 errors) ====
    import im = require('./declarationEmit_nameConflicts_1');
    export module M {
           ~~~~~~
!!! error TS1547: The 'module' keyword is not allowed for namespace declarations. Use the 'namespace' keyword instead.
        export function f() { }
        export class C { }
        export module N {
               ~~~~~~
!!! error TS1547: The 'module' keyword is not allowed for namespace declarations. Use the 'namespace' keyword instead.
            export function g() { };
            export interface I { }
        }
    
        export import a = M.f;
        export import b = M.C;
        export import c = N;
        export import d = im;
    }
    
    export module M.P {
           ~~~~~~
!!! error TS1547: The 'module' keyword is not allowed for namespace declarations. Use the 'namespace' keyword instead.
                    ~
!!! error TS1547: The 'module' keyword is not allowed for namespace declarations. Use the 'namespace' keyword instead.
        export function f() { }
        export class C { }
        export module N {
               ~~~~~~
!!! error TS1547: The 'module' keyword is not allowed for namespace declarations. Use the 'namespace' keyword instead.
            export function g() { };
            export interface I { }
        }
        export import im = M.P.f;
        export var a = M.a; // emitted incorrectly as typeof f
        export var b = M.b; // ok
        export var c = M.c; // ok
        export var g = M.c.g; // ok
        export var d = M.d; // emitted incorrectly as typeof im
    }
    
    export module M.Q {
           ~~~~~~
!!! error TS1547: The 'module' keyword is not allowed for namespace declarations. Use the 'namespace' keyword instead.
                    ~
!!! error TS1547: The 'module' keyword is not allowed for namespace declarations. Use the 'namespace' keyword instead.
        export function f() { }
        export class C { }
        export module N {
               ~~~~~~
!!! error TS1547: The 'module' keyword is not allowed for namespace declarations. Use the 'namespace' keyword instead.
            export function g() { };
            export interface I { }
        }
        export interface b extends M.b { } // ok
        export interface I extends M.c.I { } // ok
        export module c {
               ~~~~~~
!!! error TS1547: The 'module' keyword is not allowed for namespace declarations. Use the 'namespace' keyword instead.
            export interface I extends M.c.I { } // ok
        }
    }
==== declarationEmit_nameConflicts_1.ts (1 errors) ====
    module f { export class c { } }
    ~~~~~~
!!! error TS1547: The 'module' keyword is not allowed for namespace declarations. Use the 'namespace' keyword instead.
    export = f;
    